syntax = "proto3";
package rpc_crypto;
import "google/api/annotations.proto";

/**
 * Provide information about supported currencies
 */
service Currencies {
    rpc getCurrencies (Empty) returns (SupportedCurrencies) {
        option (google.api.http).get = "/currencies";
    }
}

message Empty {
}

message Currency {
    string canonical_symbol = 1;
    string symbol = 2;
    uint32 decimals = 3;
}

message SupportedCurrencies {
    repeated Currency currency = 1;
}